2004-11-02  Roger While <simrw@sim-basis.de>

	* codegen.c : Thinko by me - Do not exit execution
	  if there is a file USE declarative and no FILE STATUS.

2004-11-01  Roger While <simrw@sim-basis.de>

	* tree.c : Fix bug 1014371 - 88 on POINTER

2004-10-31  Roger While <simrw@sim-basis.de>

	* cobc.c, codegen.c : Activate exceptions for I/O

2004-10-31  Keisuke Nishida  <knishida@open-cobol.org>

	* parser.y (evaluate_object): Print error in the case when the
	compiler cannot handle the expression correctly.  Need fix.

2004-10-30  Roger While <simrw@sim-basis.de>

	* typeck.c, parser.y, error.c, field.c config.c, tree.c, tree.h,
	  pplex.l : Replace back-tick "`" with quote "'"
	* codegen.c : specify aligned(4) and not just aligned. On IA32,
	  wth gcc, default alignment is 16 which is non-optimal.
	  For 64-bit non-Intel platforms we may need 8 here to cater
	  for eventual direct casts for pointers and COMP-1/2 fields.

2004-10-29  Keisuke Nishida  <knishida@open-cobol.org>

	* typeck.c (cb_build_length_1): New function.
	(cb_build_length): Create an anonymous index and use it for length.

2004-09-28  Keisuke Nishida  <knishida@open-cobol.org>

	* typeck.c (cb_build_move_field): Compare flag_binary_swap for
	numeric moves.  (Thanks to Roger While)

2004-09-07  Keisuke Nishida  <knishida@open-cobol.org>

	* tree.c (finalize_file): Use cb_build_implicit_field to create record.

2004-07-06  Keisuke Nishida  <knishida@open-cobol.org>

	* parser.y (add_statement, add_body, compute_statement, compute_body)
	(divide_statement, divide_body, multiply_statement, multiply_body)
	(subtract_statement, subtract_body): Parse on_size_error before
	emitting the statement.
	* typeck.c (build_store_option): New function.
	(decimal_assign, build_decimal_assign, cb_build_add) 
	(cb_build_sub, cb_emit_divide): Updated for the new store scheme
	in libcob.

2004-05-15  Keisuke Nishida  <knishida@open-cobol.org>

	* parser.y (stop_statement): Accept RETURNING/GIVING phrase.