@@ -1,3 +1,8 @@
+2004-11-05  Roger While <simrw@sim-basis.de>
+
+	* codegen.c, field.c, tree.c, typeck.c : Handle arithemetic
+	  for !binary_trunc. 
+
 2004-11-02  Roger While <simrw@sim-basis.de>
 
 	* codegen.c : Thinko by me - Do not exit execution
